force-app/main/default/objects/Program__c/Program__c.object-meta.xml
<CustomObject>
    <description>Custom Object for Industrial Account programs.  Industrial Account programs can be created by community and internal users.  Programs have a lookup to associate them with an industrial account.  
Object Type: IA
Integrated: Y</description>
    <label>Program</label>
    <nameField>
        <label>Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Programs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>