force-app/main/default/objects/Program__c/fields/Accessories_Allowed_on_Payroll_Deduction__c.field-meta.xml
<CustomField>
    <fullName>Accessories_Allowed_on_Payroll_Deduction__c</fullName>
    <description>Indicates whether the employee is allowed to purchase accessories on payroll deduction.  
Field Type: IA
Integrated: Y</description>
    <inlineHelpText>Indicates whether the employee is allowed to purchase accessories on payroll deduction.</inlineHelpText>
    <label>Accessories Allowed on Payroll Deduction</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>