force-app/main/default/objects/Program__c/fields/Accessories_Allowed_on_Subsidy__c.field-meta.xml
<CustomField>
    <fullName>Accessories_Allowed_on_Subsidy__c</fullName>
    <description>Indicates if an employee is able to purchase accessories on a subsidy
Field Type: IA
Integrated: Y</description>
    <inlineHelpText>Indicates if an employee is able to purchase accessories on a subsidy</inlineHelpText>
    <label>Accessories Allowed on Subsidy</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>