force-app/main/default/objects/Program__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Industrial Account (Account Standard Object) for the program.
Field Type: IA
Integrated: Y</description>
    <inlineHelpText>Lookup to Industrial Account (Account Standard Object) for the program.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Programs</relationshipLabel>
    <relationshipName>Programs</relationshipName>
    <type>Lookup</type>
</CustomField>