force-app/main/default/objects/Program__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <description>Formula field to display the account name of the Industrial Account in which the program is associated with.
Field Type: IA
Integrated: Y</description>
    <formula>Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula field to display the account name of the Industrial Account in which the program is associated with.</inlineHelpText>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>