force-app/main/default/objects/Program__c/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <description>Formula field to display the account number of the Industrial Account in which the program is associated with.
Field Type: IA
Integrated: Y</description>
    <formula>Account__r.Account_Number_BPC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula field to display the account number of the Industrial Account in which the program is associated with.</inlineHelpText>
    <label>Account Number</label>
    <type>Text</type>
</CustomField>