force-app/main/default/objects/Program__c/fields/Account_Safe_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_Safe_ID__c</fullName>
    <description>CASESAFE for the Account ID for Program Outbound Messages</description>
    <formula>CASESAFEID(Account__r.Id)</formula>
    <inlineHelpText>CASESAFEID for the related Account</inlineHelpText>
    <label>Account Safe ID</label>
    <type>Text</type>
</CustomField>