force-app/main/default/objects/Program__c/fields/Account_Tax_Exempt__c.field-meta.xml
<CustomField>
    <fullName>Account_Tax_Exempt__c</fullName>
    <formula>If( isPickVal(Account__r.Tax_Exempt__c, &apos;Yes&apos;), &apos;Account is Tax Exempt&apos;, &apos;Account is not Tax Exempt&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Tax Exempt</label>
    <type>Text</type>
</CustomField>