force-app/main/default/objects/Program__c/fields/AccountOwningStoreNbr__c.field-meta.xml
<CustomField>
    <fullName>AccountOwningStoreNbr__c</fullName>
    <description>RWFB Program Owner related Contact Account Store Number 
Used in Job &quot;SFDC ODS FullLoad&quot;</description>
    <formula>Owner:User.Contact.Account_Store_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Owning Store Number based on the Program Owner</inlineHelpText>
    <label>Account Owning Store Nbr</label>
    <type>Text</type>
</CustomField>