force-app/main/default/objects/Program__c/fields/AccountOwningStoreType__c.field-meta.xml
<CustomField>
    <fullName>AccountOwningStoreType__c</fullName>
    <description>Program Account Owing Store Type; Dealer, Corporate, Blank</description>
    <formula>Account__r.Owning_Store_Account_Type__c</formula>
    <inlineHelpText>Program Account Owing Store Type; Dealer, Corporate, Blank</inlineHelpText>
    <label>Account Owning Store Type</label>
    <type>Text</type>
</CustomField>