force-app/main/default/objects/Program__c/fields/AccountParentAccountNbr__c.field-meta.xml
<CustomField>
    <fullName>AccountParentAccountNbr__c</fullName>
    <description>The parent account number related to the Program related account</description>
    <formula>Account__r.Parent_Account_Number__c</formula>
    <inlineHelpText>Account Parent - Account Number</inlineHelpText>
    <label>Account Parent Account Nbr</label>
    <type>Text</type>
</CustomField>