force-app/main/default/objects/Program__c/fields/Activation_5_Years__c.field-meta.xml
<CustomField>
    <fullName>Activation_5_Years__c</fullName>
    <formula>IF(
  AND(
    MONTH( Activation_Date__c ) = 2,
    DAY( Activation_Date__c ) = 29,
    NOT( 
      OR( 
        MOD( YEAR( Activation_Date__c ), 400 ) = 0, 
        AND( 
          MOD( YEAR( Activation_Date__c ), 4 ) = 0,
          MOD( YEAR( Activation_Date__c ), 100 ) != 0
        )
      )
    ) 
  ),
  DATE( YEAR( Activation_Date__c ) + 5, 3, 1),
  DATE( YEAR( Activation_Date__c ) + 5, MONTH( Activation_Date__c ), DAY( Activation_Date__c ) ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activation 5 Years</label>
    <type>Date</type>
</CustomField>