force-app/main/default/objects/Program__c/fields/Activation_Date__c.field-meta.xml
<CustomField>
    <fullName>Activation_Date__c</fullName>
    <description>The activation (effective) date of an Industrial Account Program.
Field Type: IA
Integrated: Y</description>
    <inlineHelpText>The activation (effective) date of an Industrial Account Program.</inlineHelpText>
    <label>Activation Date</label>
    <type>Date</type>
</CustomField>