force-app/main/default/objects/Program__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked the Industrial Account program is active.  If unchecked the program is inactive.
Field Type: IA
Integrated: Y</description>
    <inlineHelpText>If checked the Industrial Account program is active.  If unchecked the program is inactive.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>