force-app/main/default/objects/Program__c/fields/Allow_Expedited_Shipping__c.field-meta.xml
<CustomField>
    <fullName>Allow_Expedited_Shipping__c</fullName>
    <description>Designate whether an account will allow expedited shipping on transactions done on their industrial account</description>
    <inlineHelpText>Choose whether an account will allow expedited shipping on transactions done on their industrial account</inlineHelpText>
    <label>Allow Expedited Shipping</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Ecomm_Enabled__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>