force-app/main/default/objects/Program__c/fields/Alternative_Payment__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Payment__c</fullName>
    <description>Indicates if alternative payment is accepted as part of the Industrial Account Program.
Field Type: IA
Integrated: Y</description>
    <inlineHelpText>Indicates if alternative payment is accepted as part of the Industrial Account Program.</inlineHelpText>
    <label>P-Card</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>True</fullName>
                <label>Yes</label>
            </value>
            <value>
                <fullName>False</fullName>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>