force-app/main/default/objects/Program__c/fields/Annual_Reset_or_Rollover__c.field-meta.xml
<CustomField>
    <fullName>Annual_Reset_or_Rollover__c</fullName>
    <label>Voucher Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Eligibility_Option__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single-use</fullName>
            </value>
            <value>
                <fullName>Multi-use</fullName>
            </value>
            <value>
                <fullName>Annual Reset</fullName>
                <isActive>false</isActive>
                <label>Annual Reset</label>
            </value>
            <value>
                <fullName>Rollover</fullName>
                <isActive>false</isActive>
                <label>Rollover</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>