force-app/main/default/objects/Program__c/fields/Auto_Add_Products__c.field-meta.xml
<CustomField>
    <fullName>Auto_Add_Products__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If TRUE your price book is automatically updated with new products that meet stored filter criteria. EXAMPLE: a program for Red Wing &amp; Steel Toe and a new product product is manufactured that is Red Wing &amp; Steel Toe it will be added to your price book.
Field Type: IA
Integrated: Y</description>
    <inlineHelpText>If TRUE your price book is automatically updated with new products that meet stored filter criteria. EXAMPLE: a program for Red Wing &amp; Steel Toe and a new product product is manufactured that is Red Wing &amp; Steel Toe it will be added to your price book.</inlineHelpText>
    <label>Auto Add Products</label>
    <type>Checkbox</type>
</CustomField>