force-app/main/default/objects/Program__c/fields/Auto_Update_Price__c.field-meta.xml
<CustomField>
    <fullName>Auto_Update_Price__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If TRUE your price books is automatically adjusted with MSRP changes.  EXAMPLE:  If you had 20% off Red Wing and the MSRP increases; your 20% remains but it is off the new MSRP.
Field Type: IA
Integrated: Y</description>
    <inlineHelpText>If TRUE your price book is automatically adjusted with MSRP changes.  EXAMPLE:  If you had 20% off Red Wing and the MSRP increases; your 20% remains but it is off the new MSRP.</inlineHelpText>
    <label>Auto Update Price</label>
    <type>Checkbox</type>
</CustomField>