force-app/main/default/objects/Program__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Free text field to provide a description of the Industrial Account Program.
Field Type: IA
Integrated: Y</description>
    <inlineHelpText>Free text field to provide a description of the Industrial Account Program.</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>