force-app/main/default/objects/Program__c/fields/Ecomm_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Ecomm_Enabled__c</fullName>
    <description>Designates a digital voucher program to be used for ecommerce purchases</description>
    <inlineHelpText>Designates a digital voucher program to be used for ecommerce purchases</inlineHelpText>
    <label>Ecomm Enabled</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Eligibility_Option__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>