force-app/main/default/objects/Program__c/fields/Eligibility_Option__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Option__c</fullName>
    <description>Indicates whom the eligibility is tied / not tied with.
Field Type: IA
Integrated: Y</description>
    <inlineHelpText>Indicates whom the eligibility is tied / not tied with.</inlineHelpText>
    <label>Use Eligibility Tool</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>False</fullName>
                <label>No</label>
            </value>
            <value>
                <fullName>True</fullName>
                <label>Yes</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>