force-app/main/default/objects/Program__c/fields/Exclusive__c.field-meta.xml
<CustomField>
    <fullName>Exclusive__c</fullName>
    <description>Indicates the exclusivity of a Industrial Account Program.  Values are yes or no.
Field Type: IA
Integrated: Y</description>
    <inlineHelpText>Indicates the exclusivity of a Industrial Account Program.  Values are yes or no.</inlineHelpText>
    <label>Exclusive</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>