force-app/main/default/objects/Program__c/fields/Exp_Date_Within_5_Activation__c.field-meta.xml
<CustomField>
    <fullName>Exp_Date_Within_5_Activation__c</fullName>
    <formula>Expiration_Date__c &lt;= Activation_5_Years__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exp Date Within 5 Activation</label>
    <type>Checkbox</type>
</CustomField>