force-app/main/default/objects/Program__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <description>The Industrial Account Program&apos;s expiration date.  A program will become inactive if the expiration date is less than today.
Field Type: IA
Integrated: Y</description>
    <inlineHelpText>The Industrial Account Program&apos;s expiration date.  A program will become inactive if the expiration date is less than today.</inlineHelpText>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>