force-app/main/default/objects/Program__c/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <description>The frequency of voucher distribution.  Values are annual renewal or on-demand.
Field Type: IA
Integrated: Y</description>
    <inlineHelpText>The frequency of voucher distribution.  Values are annual renewal or on-demand.</inlineHelpText>
    <label>Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annual Renewal</fullName>
            </value>
            <value>
                <fullName>On-Demand</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>