force-app/main/default/objects/Program__c/fields/GSA_Pricing__c.field-meta.xml
<CustomField>
    <fullName>GSA_Pricing__c</fullName>
    <description>GSA Pricing</description>
    <inlineHelpText>GSA Pricing</inlineHelpText>
    <label>GSA Pricing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>