force-app/main/default/objects/Program__c/fields/HasActiveAccount__c.field-meta.xml
<CustomField>
    <fullName>HasActiveAccount__c</fullName>
    <description>Has Account that is Active</description>
    <formula>Account__r.Active__c</formula>
    <inlineHelpText>Has Account that is Active</inlineHelpText>
    <label>HasActiveAccount</label>
    <type>Checkbox</type>
</CustomField>