force-app/main/default/objects/Program__c/fields/HasBeenActive__c.field-meta.xml
<CustomField>
    <fullName>HasBeenActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This flag will be updated by the Program - Has been Active workflow to stay checked once the Program has been activated. Once activated, the Program Type cannot be changed.</description>
    <inlineHelpText>Once activated, the Program Type cannot be changed.</inlineHelpText>
    <label>HasBeenActive</label>
    <type>Checkbox</type>
</CustomField>