force-app/main/default/objects/Program__c/fields/HasPricebook__c.field-meta.xml
<CustomField>
    <fullName>HasPricebook__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used by APEX to flag Programs that have an active custom Pricebook.</description>
    <inlineHelpText>This field is used by APEX to flag Programs that have an active custom Pricebook.</inlineHelpText>
    <label>HasPricebook</label>
    <type>Checkbox</type>
</CustomField>