force-app/main/default/objects/Program__c/fields/Historic_Pricebook_ID__c.field-meta.xml
<CustomField>
    <fullName>Historic_Pricebook_ID__c</fullName>
    <description>Contains the Historic Pricebook ID for reference during the migration of the new PPB / PPBE data model</description>
    <inlineHelpText>Contains the Historic Pricebook ID for reference during the migration of the new PPB / PPBE data model</inlineHelpText>
    <label>Historic Pricebook ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>