force-app/main/default/objects/Program__c/fields/Invoice_Attributes_Required__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Attributes_Required__c</fullName>
    <description>Text field to be populated by the related Account Invoice Attributes Required value when Type is not Cash and Carry.</description>
    <inlineHelpText>This field is controlled by the Account and populated when Type is not Cash and Carry</inlineHelpText>
    <label>Invoice Attributes Required</label>
    <type>TextArea</type>
</CustomField>