force-app/main/default/objects/Program__c/fields/IsNationalAccount__c.field-meta.xml
<CustomField>
    <fullName>IsNationalAccount__c</fullName>
    <description>Checks to evaluate where related Account Type is National and Active.</description>
    <formula>AND(
ISPICKVAL (Account__r.Organization_Type__c, &quot;National&quot;),
 Account__r.Active__c = TRUE)</formula>
    <inlineHelpText>Checks to evaluate where related Account Type is National and Active.</inlineHelpText>
    <label>IsNationalAccount</label>
    <type>Checkbox</type>
</CustomField>