force-app/main/default/objects/Program__c/fields/Mandatory__c.field-meta.xml
<CustomField>
    <fullName>Mandatory__c</fullName>
    <description>Indicates if employees are required to use payroll deduct for their portion of the transaction
Field Type: IA
Integrated: Y</description>
    <inlineHelpText>Are employees required to use payroll deduct for their portion of the transaction?</inlineHelpText>
    <label>Mandatory</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>