force-app/main/default/objects/Program__c/fields/Max_Amount__c.field-meta.xml
<CustomField>
    <fullName>Max_Amount__c</fullName>
    <description>Specify an amount when an open subsidy is used.  Any value over this amount will not be allowed.
Field Type: IA
Integrated: Y</description>
    <inlineHelpText>Specify an amount when an open subsidy is used.  Any value over this amount will not be allowed.</inlineHelpText>
    <label>Max Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>