force-app/main/default/objects/Program__c/fields/Number_of_Eligible_Employees__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Eligible_Employees__c</fullName>
    <description>The total number of employees that would be eligible to purchase items on the Industrial Account Program.
Field Type: IA
Integrated: Y</description>
    <inlineHelpText>The total number of employees that would be eligible to purchase items on the Industrial Account Program.</inlineHelpText>
    <label>Number of Eligible Employees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>