force-app/main/default/objects/Program__c/fields/Number_of_Locations__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Locations__c</fullName>
    <description>Number of locations for the Industrial Account (locations of employees or purchase potential).
Field Type: IA
Integrated: Y</description>
    <inlineHelpText>Number of locations for the Industrial Account (locations of employees or purchase potential).</inlineHelpText>
    <label>Number of Locations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>