force-app/main/default/objects/Program__c/fields/Number_of_Pairs_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Pairs_Allowed__c</fullName>
    <description>Number of pairs (footwear) employee is allowed under an Industrial Account Program.
Field Type: IA
Integrated: Y</description>
    <inlineHelpText>Number of pairs (footwear) employee is allowed under an Industrial Account Program.</inlineHelpText>
    <label>Number of Pairs Allowed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>