force-app/main/default/objects/Program__c/fields/Online_Pricelist_URL__c.field-meta.xml
<CustomField>
    <fullName>Online_Pricelist_URL__c</fullName>
    <description>Field that concatenates the RWCP Community, Online Pricelist URL Prefix with the Program ID for inclusion on the Printable Materials</description>
    <formula>$Setup.RWfB_Community__c.Online_Pricelist_URL_Prefix__c + 
 CASESAFEID(Id)</formula>
    <inlineHelpText>Field that concatenates the RWCP Community, Online Pricelist URL Prefix with the Program ID for inclusion on the Printable Materials</inlineHelpText>
    <label>Online Pricelist URL</label>
    <type>Text</type>
</CustomField>