force-app/main/default/objects/Program__c/fields/Open_Subsidy__c.field-meta.xml
<CustomField>
    <fullName>Open_Subsidy__c</fullName>
    <description>Open subsidy is only used when eligibility is managed.  This allows the subsidy amount to be determined when issuing vouchers.
Field Type: IA
Integrated: Y</description>
    <inlineHelpText>Open subsidy is only used when eligibility is managed.  This allows the subsidy amount to be determined when issuing vouchers.</inlineHelpText>
    <label>Open Subsidy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>