force-app/main/default/objects/Program__c/fields/Outbound_Message_Type__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Message_Type__c</fullName>
    <description>Outbound Message Type
Field Type: IA
Integrated: Y</description>
    <inlineHelpText>Outbound Message Type</inlineHelpText>
    <label>Outbound Message Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Update Program</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>