force-app/main/default/objects/Program__c/fields/Owning_Store_Region__c.field-meta.xml
<CustomField>
    <fullName>Owning_Store_Region__c</fullName>
    <description>Program Owner User Contact Account Region Code</description>
    <formula>Owner:User.Contact.Account.Region_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Program Owner Store Region</inlineHelpText>
    <label>Owning Store Region</label>
    <type>Text</type>
</CustomField>