force-app/main/default/objects/Program__c/fields/Owning_Store_Type__c.field-meta.xml
<CustomField>
    <fullName>Owning_Store_Type__c</fullName>
    <description>Program Owner Store Type</description>
    <formula>Text(Owner:User.Contact.Account.Store_Ownership_Type__c)</formula>
    <inlineHelpText>Program Owner Store Type</inlineHelpText>
    <label>Owning Store Type</label>
    <type>Text</type>
</CustomField>