force-app/main/default/objects/Program__c/fields/PL_Clean_up_Date__c.field-meta.xml
<CustomField>
    <fullName>PL_Clean_up_Date__c</fullName>
    <description>The Date the Pricelist was Refiltered and PPBEs cleaned up</description>
    <inlineHelpText>The Date the Pricelist was Refiltered and PPBEs cleaned up</inlineHelpText>
    <label>PL Clean-up Date</label>
    <type>Date</type>
</CustomField>