force-app/main/default/objects/Program__c/fields/PL_Clean_up_Needed_Sys_Admin__c.field-meta.xml
<CustomField>
    <fullName>PL_Clean_up_Needed_Sys_Admin__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Price List Clean-up needed by system administrator</description>
    <inlineHelpText>Price List Clean-up needed by system administrator</inlineHelpText>
    <label>PL Clean-up Needed (Sys Admin)</label>
    <type>Checkbox</type>
</CustomField>