force-app/main/default/objects/Program__c/fields/Price_Book_ID__c.field-meta.xml
<CustomField>
    <fullName>Price_Book_ID__c</fullName>
    <description>Indicates the related Price Book (ID).
Field Type: IA
Integrated: Y</description>
    <inlineHelpText>Indicates the related Price Book.</inlineHelpText>
    <label>Price Book ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>