force-app/main/default/objects/Program__c/fields/Price_List_ID__c.field-meta.xml
<CustomField>
    <fullName>Price_List_ID__c</fullName>
    <description>Used for outbound messaging to determine whether to use the Historic Pricebook Id or the new Pub Pricebook Id</description>
    <formula>IF (Historic_Pricebook_ID__c != NULL, Historic_Pricebook_ID__c, Price_Book_ID__c)</formula>
    <inlineHelpText>Used for outbound messaging to determine whether to use the Historic Pricebook Id or the new Pub Pricebook Id</inlineHelpText>
    <label>Price List ID</label>
    <type>Text</type>
</CustomField>