force-app/main/default/objects/Program__c/fields/PriorActive__c.field-meta.xml
<CustomField>
    <fullName>PriorActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes if this Program was previously Activated</description>
    <inlineHelpText>Denotes if this Program was previously Activated</inlineHelpText>
    <label>PriorActive</label>
    <type>Checkbox</type>
</CustomField>