force-app/main/default/objects/Program__c/fields/Processing_Status__c.field-meta.xml
<CustomField>
    <fullName>Processing_Status__c</fullName>
    <description>The Processing status determine the status of the related Product record creation for this program. Program Activation is dependent on the Program processing.</description>
    <inlineHelpText>The Processing status determine the status of the related Product record creation for this program. Program Activation is dependent on the Program processing.</inlineHelpText>
    <label>Processing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>