force-app/main/default/objects/Program__c/fields/Program_Account_Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>Program_Account_Legal_Name__c</fullName>
    <description>Program Account Legal Name</description>
    <formula>Account__r.Legal_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Account Legal Name</label>
    <type>Text</type>
</CustomField>