force-app/main/default/objects/Program__c/fields/Program_ID__c.field-meta.xml
<CustomField>
    <fullName>Program_ID__c</fullName>
    <description>A unique automatically generated number for each Industrial Account Program.  Not editable.
Field Type: IA
Integrated: Y</description>
    <displayFormat>P-{0000}</displayFormat>
    <inlineHelpText>A unique automatically generated number for each Industrial Account Program.  Not editable.</inlineHelpText>
    <label>Program ID</label>
    <type>AutoNumber</type>
</CustomField>