force-app/main/default/objects/Program__c/fields/Program_Notes_Trim__c.field-meta.xml
<CustomField>
    <fullName>Program_Notes_Trim__c</fullName>
    <description>A short program notes field for list views</description>
    <inlineHelpText>A short program notes field for list views</inlineHelpText>
    <label>Program Notes Trim</label>
    <length>55</length>
    <type>Text</type>
</CustomField>