force-app/main/default/objects/Program__c/fields/Program_Notes_Trimmed__c.field-meta.xml
<CustomField>
    <fullName>Program_Notes_Trimmed__c</fullName>
    <description>A short (trimmed) version of Purchase Program Notes used in Community list views. Formula Field
Field Type: IA
Integrated: N</description>
    <formula>IF(NOT(ISBLANK(Purchase_Program_Notes__c)), LEFT(Purchase_Program_Notes__c, 55) + &quot;...&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>A short (trimmed) version of Purchase Program Notes used in Community list views. Formula Field</inlineHelpText>
    <label>Program Notes Trimmed</label>
    <type>Text</type>
</CustomField>