force-app/main/default/objects/Program__c/fields/Program_Owner_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Program_Owner_Company_Name__c</fullName>
    <description>Program Owner User Record Company Name</description>
    <formula>Owner:User.CompanyName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Owner Company Name</label>
    <type>Text</type>
</CustomField>