force-app/main/default/objects/Program__c/fields/Program_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Program_Owner_Email__c</fullName>
    <description>Program Owner User Record Email</description>
    <formula>Owner:User.Email</formula>
    <label>Program Owner Email</label>
    <type>Text</type>
</CustomField>