force-app/main/default/objects/Program__c/fields/Program_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Program_Owner_Name__c</fullName>
    <description>Program Owner User Record First Name and Last Name</description>
    <formula>Owner:User.FirstName &amp; &quot; &quot; &amp; Owner:User.LastName</formula>
    <label>Program Owner Name</label>
    <type>Text</type>
</CustomField>