force-app/main/default/objects/Program__c/fields/Program_Owner_Phone__c.field-meta.xml
<CustomField>
    <fullName>Program_Owner_Phone__c</fullName>
    <description>Program Owner User Record Phone</description>
    <formula>Owner:User.Phone</formula>
    <label>Program Owner Phone</label>
    <type>Text</type>
</CustomField>