force-app/main/default/objects/Program__c/fields/Program_Safe_ID__c.field-meta.xml
<CustomField>
    <fullName>Program_Safe_ID__c</fullName>
    <description>The Program 18 character Safe Id</description>
    <formula>CASESAFEID(Id)</formula>
    <inlineHelpText>The Program 18 character Safe Id</inlineHelpText>
    <label>Program Safe ID</label>
    <type>Text</type>
</CustomField>