force-app/main/default/objects/Program__c/fields/Proposal_Notes__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Notes__c</fullName>
    <defaultValue>&quot;Please do not hesitate to contact me with any questions you may have.&quot;</defaultValue>
    <description>Free text field to provide notes which should be included on the proposal.  The proposal is a separate document (visualforce page) generated from Salesforce by choosing a button on the program.
Field Type: IA
Integrated: Y</description>
    <inlineHelpText>Free text field to provide notes which should be included on the proposal.  The proposal is a separate document (visualforce page) generated from Salesforce by choosing a button on the program.</inlineHelpText>
    <label>Proposal Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>